# pulse-level-quantum-fourier-models

./: .gitignore  LICENSE  README.md  pyproject.toml
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml  parameters_visualization.yml
notebooks/: check_full_spectrum.py  check_leakage.py  coefficients.py  data_helper.py  generate_plots.py  graph.ipynb  graph.py  n_pulse_params.py  pulses.py  pulses_shape_test.py  test.py  viz_helper.py
scripts/: mlflow_cleanup.py  slurm-job.sh  study-1.sh  study-2.sh  study-3.sh  study-4.sh  sweep_seeds.sh
src/pulse_level_qfms/: __init__.py  __main__.py  pipeline_registry.py  settings.py  utils.py
src/pulse_level_qfms/pipelines/generation/: __init__.py  nodes.py  pipeline.py
src/pulse_level_qfms/pipelines/processing/: __init__.py  nodes.py  pipeline.py
src/pulse_level_qfms/pipelines/visualization/: __init__.py  nodes.py  pipeline.py
tests/: test_jacobian_ranks.py
tests/pipelines/visualization/: test_pipeline.py
